<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCodigo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/etCodigo"
        android:padding="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btAcceder"
        android:id="@+id/btAcceder"
        android:layout_below="@+id/etCodigo"
        android:layout_centerHorizontal="true"
        android:onClick="acceder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvBienvenida"
        android:id="@+id/tvBienvenida"
        android:gravity="center|center_horizontal"
        android:layout_above="@+id/etCodigo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp" />
</RelativeLayout>
